# rustman

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/axios/: Cargo.toml
crates/axios/src/: error.rs  lib.rs
crates/rustomnia-desktop/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
crates/rustomnia-desktop/src/: app.html
crates/rustomnia-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/rustomnia-desktop/src-tauri/src/: main.rs
crates/rustomnia-desktop/src-tauri/src/app/: mod.rs  request.rs
crates/rustomnia-desktop/src/lib/: request.ts
crates/rustomnia-desktop/src/lib/components/code/: CodeEditor.svelte
crates/rustomnia-desktop/src/lib/components/hooks/: ExpandHook.svelte  index.ts
crates/rustomnia-desktop/src/lib/components/treeview/: File.svelte  Tree.svelte  index.ts
crates/rustomnia-desktop/src/routes/: +layout.svelte  +page.svelte  global.scss
crates/rustomnia-desktop/src/routes/(app)/: +layout.svelte  +page.svelte
crates/rustomnia-desktop/src/routes/(app)/_components/: Menubar.svelte  Navigator.svelte  RequestsView.svelte
