[package]
name = "axios"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.33.0"
features = ["full"]

[dependencies.reqwest]
version = "0.11.22"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.107"

[dependencies.thiserror]
version = "1.0.49"

[dependencies.anyhow]
version = "1.0.75"